--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>  
-    <video controls="controls" >
+    <video controls="controls" poster="src/bg.jpeg">
        <source src="src/video.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
     </video>
 
